SERVER-7676 make sort memory limit configurable